--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
+    "moment": "^2.30.1",
     "next": "^14.2.18",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
