--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
+    "react-spring-3d-carousel": "^1.3.4",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15"
