--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "next": "^14.2.18",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "react-spring-3d-carousel": "^1.3.4",
+    "react-use-gesture": "^9.1.3",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "eslint": "^8",
