--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
+    "matter-js": "^0.20.0",
     "moment": "^2.30.1",
     "next": "^14.2.18",
     "react": "^18.3.1",
