--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.479.0",
     "matter-js": "^0.20.0",
     "moment": "^2.30.1",
     "next": "^14.2.18",
