--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "firebase": "^11.4.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.479.0",
     "matter-js": "^0.20.0",
