--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
@@ -25,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.4.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "react-spring-3d-carousel": "^1.3.4",
